--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,3 @@
-REACT_APP_GO_SERVER_URL=localhost/repo/api/v2
-REACT_APP_NODE_SERVER_URL=localhost/repo/api/v2
+REACT_APP_GO_SERVER_URL=http://localhost:8080
+REACT_APP_NODE_SERVER_URL=http://localhost:5000/api
+REACT_APP_PYTHON_SERVER_URL=http://localhost:8000
