add production url in frontend sample env

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,9 @@
-REACT_APP_GO_SERVER_URL=http://localhost:8080
-REACT_APP_NODE_SERVER_URL=http://localhost:5000/api
-REACT_APP_PYTHON_SERVER_URL=http://localhost:8000
+# For Development
+# REACT_APP_GO_SERVER_URL=http://localhost:8080
+# REACT_APP_NODE_SERVER_URL=http://localhost:5000/api
+# REACT_APP_PYTHON_SERVER_URL=http://localhost:8000
+
+# For Production
+REACT_APP_GO_SERVER_URL=https://gowebevaluator.onrender.com
+REACT_APP_NODE_SERVER_URL=https://webevaluator.onrender.com/api
+REACT_APP_PYTHON_SERVER_URL=https://flask-backend-aman-codes.vercel.app
